# platform-scaffold

./: .gitignore  README.md  go.mod
.history/: .gitignore_20260607124120  (+1 more)
templates/files/sdk-agent-core/: Dockerfile.sandbox  README.md  pyproject.toml
templates/files/sdk-agent-core/agent_core/: __init__.py  config.py
templates/files/sdk-agent-core/agent_core/agent_dsl/: meta_agent.py  parser.py
templates/files/sdk-agent-core/agent_core/channels/: __init__.py  base.py  feishu.py  manager.py  message_bus.py
templates/files/sdk-agent-core/agent_core/compaction/: __init__.py  autocompact.py  budget.py  context_cache.py  hooks.py  microcompact.py  pair_sanitizer.py  recovery.py  result_budget.py  snip.py  vfs_dehydrator.py
templates/files/sdk-agent-core/agent_core/evaluation/: evaluator_agent.py
templates/files/sdk-agent-core/agent_core/execution/: sandbox_executor.py  sandbox_session.py  subagent_executor.py
templates/files/sdk-agent-core/agent_core/llm/: client.py
templates/files/sdk-agent-core/agent_core/memory/: auto_extractor.py  graph_store.py  hooks.py  knowledge_graph.py  models.py  neo4j_store.py  retriever.py  session_blackboard.py  store.py
templates/files/sdk-agent-core/tests/: test_compaction.py  test_memory.py  test_orchestration.py  test_runtime_engine.py  test_tools.py
templates/files/sdk-gpu-worker/: README.md  pyproject.toml
templates/files/sdk-gpu-worker/gpu_worker/: __init__.py  api.py  config.py  generate_thumbnail.py  storage.py
templates/files/sdk-gpu-worker/tests/: test_fast_upload_regression.py  test_sdk.py  test_storage.py
(+224 files in other folders)
