[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-worker"
version = "0.1.0"
description = "Agent Core GPU Worker SDK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "loguru>=0.7.0",
    "boto3>=1.28.0",
    "Pillow>=10.0.0",
]

[tool.setuptools.packages.find]
include = ["gpu_worker*"]
